# GeneralPurposeMath

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  misc.cpp  test.cpp
lib/: CMakeLists.txt  sig.hpp
lib/matrix/: CMakeLists.txt  matrix.hpp
lib/number_theory/: CMakeLists.txt  factorize_zp.hpp  mod_int.hpp  number_theory.hpp  quad_residue.hpp  simple_functions.hpp
lib/polynomial/: CMakeLists.txt  polynomial.hpp
tests/: CMakeLists.txt  test_matrix.cpp  test_misc.cpp  test_number_theory.cpp  test_poly_factor.cpp  test_polynomial.cpp
